--- a/card.html
+++ b/card.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="assets/card.css?v=1.0">
     <link rel="stylesheet" href="assets/main.css">
     <link rel="icon" type="image/x-icon" href="images/coi_common_ui_ic_mobywatel_logo.svg">
-    <link rel="apple-touch-icon" href="https://i.imgur.com/gC8DDHD.png">
+    <link rel="apple-touch-icon" href="https://play-lh.googleusercontent.com/_TNbiYKasPy_isTSEg2_UEzVaev4F8fO2lLunsHJ8_Ux2g3OzkSZyzpqvJG1woSj-WD4">
     <link rel="shortcut icon" href="images/coi_common_ui_ic_mobywatel_logo.svg">
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, initial-scale=0.8, user-scalable=no">
@@ -227,3 +227,4 @@
     <script src="assets/card.js"></script>
     <script src="assets/manifest.js"></script>
 </body>
+
